--- a/pet-landing-page/style.css
+++ b/pet-landing-page/style.css
@@ -156,7 +156,7 @@ body {
 }
 
 .tip-toggle {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .tip-toggle button {
@@ -215,6 +215,7 @@ body {
 .pet-service li {
   position: relative;
   font-size: 20px;
+  text-transform: uppercase;
   margin: 10px 0;
   padding-left: 25px;
   transition: color 0.3s ease;
@@ -312,7 +313,7 @@ body {
   border-radius: 12px;
   animation: fadeIn 1.2s ease;
   overflow: hidden;
-  background: rgb(163, 116, 141);
+  background: linear-gradient(180deg, blue 0%, white 50%, orange 100%);
 }
 
 .site-footer::before {
@@ -340,6 +341,17 @@ body {
   text-align: center;
   width: 100%;
   margin-bottom: 20px;
+}
+.footer-address {
+  color: black;
+  font-family: "Segoe UI", sans-serif;
+}
+
+.footer-address h1 {
+  font-family: "Georgia", serif;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 8px;
 }
 
 .footer-brand h4 {
@@ -373,7 +385,7 @@ body {
 }
 
 .footer-links a:hover {
-  background-color: #fdf4ec;
+  background-color: #000;
   color: RED;
   transform: scale(1.1);
 }
@@ -386,13 +398,13 @@ body {
 
 .footer-social {
   display: flex;
-  gap: 12px;
+  gap: 1px;
   margin-top: 14px;
 }
 
 .footer-social a img {
   width: 28px;
-  margin-right: 40px;
+  margin-right: 20px;
   transition: transform 0.3s ease;
 }
 
@@ -409,7 +421,16 @@ body {
   border-top: 2px solid black;
 }
 
-/* Responsive */
+.footer-sections {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+/* Responsive behavior */
 @media (max-width: 768px) {
   .footer-content {
     flex-direction: column;
@@ -417,31 +438,35 @@ body {
     text-align: center;
   }
 
+  .footer-sections {
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+    margin-top: 10px;
+  }
+
   .footer-links ul {
-    grid-template-columns: 1fr;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 0;
+    list-style: none;
+    justify-items: center;
   }
 
   .footer-social {
     justify-content: center;
   }
-}
+  .tip-toggle {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 50px;
+  }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes slideUp {
-  from {
-    transform: translateY(50px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
+  .tip-toggle button {
+    margin: 10px;
   }
 }
